# CjForm_CardGame

./: .gitignore  CardGameRandom.xlsx  README.md  cjpm.toml
.cache/lsp/: myapp-cache.json
.cache/lsp/cjform/: cjform.cjo  incremental-cache.json
.cache/lsp/myapp/: incremental-cache.json
.claude/: settings.local.json
CardGame1(随机)/: CGRFarmWork.cpp  CGRTools.h  CardGameRandom.cpp  CardGameRandom.h  Double.cpp  Double.h  GeneralRole.cpp  GeneralRole.h
CardGame1(随机)/Role/: Double.txt
bridge/: CMakeLists.txt  bridge_common.h  clipboard.cpp  config.cpp  dialog.cpp  edit.cpp  events.cpp  image.cpp  net_ffi.cpp  net_ffi.h  render.cpp  util.cpp  window.cpp
cjform/: cjpm.toml
cjform/src/: animation.cj  bridge.cj  button.cj  button_style.cj  canvas.cj  check_box.cj  color.cj  combo_box.cj  context_menu.cj  dialogs.cj  event.cj  ffi_safe.cj  focus_manager.cj  group_box.cj  hbox.cj  image.cj  label.cj  layout.cj  link_label.cj  list_view.cj  menu_bar.cj  native_text_box.cj  popover.cj  position.cj  progress_bar.cj  radio_button.cj  scroll_area.cj  separator.cj  shadow.cj  slider.cj  spin_box.cj  split_pane.cj  status_bar.cj  style_sheet.cj  tab_view.cj  table_view.cj  text_box.cj  text_edit.cj  theme.cj  toggle_switch.cj  (+6 more)
relay/: Dockerfile  docker-compose.yml  relay_server.py
src/: game_engine.cj  game_ui.cj  main.cj  net_client.cj  net_common.cj  net_ffi_safe.cj  net_server.cj
